# Emu68-tools

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  nightly.yml
68040.library/: CMakeLists.txt  ldscript.lds
68040.library/src/: base.h  cachepostdma.c  cachepredma.c  init.c  main.c
Buddhabrot/: CMakeLists.txt
Buddhabrot/src/: main.c  master.c  support.c  support.h  work.h  worker.c
EmuControl/: CMakeLists.txt  EmuControl.info
EmuControl/src/: main.c  mbox.c  mbox.h
SetClockI2C/: CMakeLists.txt
SetClockI2C/src/: main.c
SmallPT/: CMakeLists.txt
SmallPT/src/: main.c  renderer.c  renderer.h  smallpt.cc  support.c  support.h
VC4Tweak/: CMakeLists.txt
VC4Tweak/src/: main.c
VideoCore.card/: CMakeLists.txt
VideoCore.card/src/: debug.c  emu68-vc4.h  main.c  mbox.c  mbox.h  messages.h  settings.h  vc4.c  vc4.h  vc6.c  vc6.h
cmake/: toolchain.cmake
common/: CMakeLists.txt
common/inc/common/: bcm_gpio.h  bcm_i2c.h  compiler.h  endian.h
common/include/common/: bcm_gpio.h  bcm_i2c.h  bcm_mbox.h  bcm_mbox_buffer.h  bcm_mbox_buffer.hpp  debug.h  endian.hpp
common/src/: bcm_mbox.c  bcm_mbox_buffer.c  debug.c
denise_thingy_app/: CMakeLists.txt
denise_thingy_app/src/: bitstream.cpp  file.hpp  i2c.cpp  i2c.hpp  main.c  main.cpp  time.hpp
devicetree.resource/: CMakeLists.txt  init.c  ldscript.lds  main.c
devicetree.resource/include/clib/: devicetree_protos.h
devicetree.resource/include/inline/: devicetree.h
devicetree.resource/include/pragmas/: devicetree_pragmas.h
devicetree.resource/include/proto/: devicetree.h
devicetree.resource/sfd/: devicetree_lib.sfd
devicetree.resource/src/: addram.c  closekey.c  devicetree.h  findproperty.c  getchild.c  getkeyname.c  getparent.c  getproperty.c  getproplen.c  getpropname.c  getpropvalue.c  init.c  main.c  openkey.c
emmc.device/: CMakeLists.txt  ldscript.lds
emmc.device/src/: abortio.c  beginio.c  close.c  emmc.c  emmc.h  expunge.c  extfunc.c  findtoken.c  findtoken.h  init.c  main.c  mbox.c  mbox.h  open.c  unittask.c
emu68-vc4.card/: CMakeLists.txt
emu68-vc4.card/src/: boardinfo.h  emu68-vc4.h  end.c  main.c  mbox.c  mbox.h  support.c  support.h
emu68-vc4.card/src/vpu/: block_copy.h  block_copy.s
i2c.library/: CMakeLists.txt
i2c.library/inc/: i2c_base.h
i2c.library/include/clib/: i2c_protos.h
i2c.library/include/inline/: i2c.h
i2c.library/include/libraries/: i2c.h
i2c.library/include/pragmas/: i2c_pragmas.h
i2c.library/include/proto/: i2c.h
i2c.library/sfd/: i2c_lib.sfd
i2c.library/src/: bcm_peripheral.c  bcm_peripheral.h  gpio.c  gpio.h  i2c_private.h  main.c
i2c.library/src/lib_functions/: alloc_i2c.c  bring_back_i2c.c  free_i2c.c  get_i2c_opponent.c  i2c_err_text.c  init_i2c.c  receive_i2c.c  send_i2c.c  set_i2c_delay.c  shutdown_i2c.c
lattice_i2c_prog/: CMakeLists.txt
lattice_i2c_prog/src/: bitstream.cpp  file.hpp  i2c.cpp  main.cpp  time.hpp
sdcard.device/: CMakeLists.txt  ldscript.lds
sdcard.device/src/: abortio.c  beginio.c  close.c  emmc.c  emmc.h  expunge.c  extfunc.c  findtoken.h  init.c  main.c  mbox.c  mbox.h  open.c  sdcard.h  sdhost.c  sdhost.h  unit_task.c
wifipi.device/: CMakeLists.txt
wifipi.device/src/: brcmfmac43430-sdio.h  device.c  end.c  firmware.c  init.c  mbox.c  mbox.h  sdio.c  sdio.h  start.c  wifipi.h
